Fixed video align on monitors bigger than 15"

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -5180,6 +5180,9 @@ html, body {
     min-width: 1080px;
     height: auto;
     text-align: center; }
+    @media (max-width: 1500px) {
+      .first-block #background-video {
+        top: -150px; } }
 
 .touch .nav h1 {
   color: #fafafa; }
